--- a/BeamWallet/ViewControllers/Main/Settings/Cells/NodeCell.xib
+++ b/BeamWallet/ViewControllers/Main/Settings/Cells/NodeCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -14,78 +14,102 @@
         <array key="SF-Pro-Display-Regular.otf">
             <string>SFProDisplay-Regular</string>
         </array>
+        <array key="SF-Pro-Display-RegularItalic.otf">
+            <string>SFProDisplay-Italic</string>
+        </array>
     </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="134" id="KGk-i7-Jjw" customClass="NodeCell" customModule="BeamWallet" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="117"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="198" id="KGk-i7-Jjw" customClass="NodeCell" customModule="BeamWallet" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="181"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="117"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="181"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="D0V-ij-92s">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="117"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="181"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconRandomNode" translatesAutoresizingMaskIntoConstraints="NO" id="OhU-NP-q7k">
                                 <rect key="frame" x="141" y="0.0" width="38" height="38"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="38" id="Alz-Ah-mCH"/>
+                                    <constraint firstAttribute="width" constant="38" id="Z3Q-Zu-1tu"/>
+                                </constraints>
                             </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="Fxk-HV-YMJ">
-                                <rect key="frame" x="20" y="53" width="280" height="63.5"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="EBa-Sf-W9T">
+                                <rect key="frame" x="20" y="53" width="280" height="128"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b30-0A-ylF">
-                                        <rect key="frame" x="0.0" y="0.0" width="40" height="63.5"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="40" id="csT-5N-VmV"/>
-                                        </constraints>
-                                        <state key="normal" image="checkboxEmpty"/>
-                                        <state key="selected" image="checkboxFull"/>
-                                    </button>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="LGZ-tS-cke">
-                                        <rect key="frame" x="55" y="0.0" width="225" height="63.5"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="Fxk-HV-YMJ">
+                                        <rect key="frame" x="0.0" y="0.0" width="280" height="63.5"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="RANDOM NODE (fast sync)" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PTR-Bl-xha">
-                                                <rect key="frame" x="0.0" y="0.0" width="225" height="17"/>
-                                                <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="14"/>
-                                                <color key="textColor" red="0.55294117649999996" green="0.63137254899999995" blue="0.67843137249999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                <nil key="highlightedColor"/>
-                                                <userDefinedRuntimeAttributes>
-                                                    <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
-                                                    <userDefinedRuntimeAttribute type="number" keyPath="letterSpacing">
-                                                        <real key="value" value="1.5"/>
-                                                    </userDefinedRuntimeAttribute>
-                                                </userDefinedRuntimeAttributes>
-                                            </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="For those who don’t have any other Beam wallet." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xsl-tZ-wW6">
-                                                <rect key="frame" x="0.0" y="25" width="225" height="38.5"/>
-                                                <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="16"/>
-                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <nil key="highlightedColor"/>
-                                                <userDefinedRuntimeAttributes>
-                                                    <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
-                                                </userDefinedRuntimeAttributes>
-                                            </label>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b30-0A-ylF">
+                                                <rect key="frame" x="0.0" y="0.0" width="40" height="63.5"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="40" id="csT-5N-VmV"/>
+                                                </constraints>
+                                                <state key="normal" image="checkboxEmpty"/>
+                                                <state key="selected" image="checkboxFull"/>
+                                            </button>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="LGZ-tS-cke">
+                                                <rect key="frame" x="55" y="0.0" width="225" height="63.5"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="RANDOM NODE (fast sync)" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PTR-Bl-xha">
+                                                        <rect key="frame" x="0.0" y="0.0" width="225" height="17"/>
+                                                        <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="14"/>
+                                                        <color key="textColor" red="0.55294117649999996" green="0.63137254899999995" blue="0.67843137249999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <nil key="highlightedColor"/>
+                                                        <userDefinedRuntimeAttributes>
+                                                            <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
+                                                            <userDefinedRuntimeAttribute type="number" keyPath="letterSpacing">
+                                                                <real key="value" value="1.5"/>
+                                                            </userDefinedRuntimeAttribute>
+                                                        </userDefinedRuntimeAttributes>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="For those who don’t have any other Beam wallet." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xsl-tZ-wW6">
+                                                        <rect key="frame" x="0.0" y="25" width="225" height="38.5"/>
+                                                        <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="16"/>
+                                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <nil key="highlightedColor"/>
+                                                        <userDefinedRuntimeAttributes>
+                                                            <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
+                                                        </userDefinedRuntimeAttributes>
+                                                    </label>
+                                                </subviews>
+                                            </stackView>
                                         </subviews>
                                     </stackView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m8b-xl-V0b">
+                                        <rect key="frame" x="0.0" y="83.5" width="280" height="44.5"/>
+                                        <string key="text">You are currently connected to the node
+that supports only online transactions.</string>
+                                        <fontDescription key="fontDescription" name="SFProDisplay-Italic" family="SF Pro Display" pointSize="14"/>
+                                        <color key="textColor" red="0.55294117647058827" green="0.63137254901960782" blue="0.67843137254901964" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="NO"/>
+                                            <userDefinedRuntimeAttribute type="string" keyPath="localizationKey" value="remote_node_hint"/>
+                                        </userDefinedRuntimeAttributes>
+                                    </label>
                                 </subviews>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="Fxk-HV-YMJ" secondAttribute="bottom" constant="0.5" id="1DZ-7R-XlA"/>
+                            <constraint firstItem="EBa-Sf-W9T" firstAttribute="top" secondItem="OhU-NP-q7k" secondAttribute="bottom" constant="15" id="47R-Xb-Mah"/>
+                            <constraint firstItem="EBa-Sf-W9T" firstAttribute="leading" secondItem="D0V-ij-92s" secondAttribute="leading" constant="20" id="7Vf-CS-sgk"/>
                             <constraint firstItem="OhU-NP-q7k" firstAttribute="centerX" secondItem="D0V-ij-92s" secondAttribute="centerX" id="BM7-o4-rSX"/>
                             <constraint firstItem="OhU-NP-q7k" firstAttribute="top" secondItem="D0V-ij-92s" secondAttribute="top" id="Jf6-RX-i1j"/>
-                            <constraint firstItem="Fxk-HV-YMJ" firstAttribute="leading" secondItem="D0V-ij-92s" secondAttribute="leading" constant="20" id="LMf-wB-KLV"/>
-                            <constraint firstItem="Fxk-HV-YMJ" firstAttribute="top" secondItem="OhU-NP-q7k" secondAttribute="bottom" constant="15" id="a0D-gM-1tY"/>
-                            <constraint firstAttribute="trailing" secondItem="Fxk-HV-YMJ" secondAttribute="trailing" constant="20" id="rqt-ol-QMy"/>
+                            <constraint firstAttribute="trailing" secondItem="EBa-Sf-W9T" secondAttribute="trailing" constant="20" id="X7C-Dz-qGL"/>
+                            <constraint firstAttribute="bottom" secondItem="EBa-Sf-W9T" secondAttribute="bottom" id="eVs-oe-xzP"/>
                         </constraints>
                     </view>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="D0V-ij-92s" secondAttribute="bottom" id="3Xg-Iq-eSB"/>
                     <constraint firstAttribute="trailing" secondItem="D0V-ij-92s" secondAttribute="trailing" id="IQ1-V6-Llt"/>
+                    <constraint firstAttribute="bottom" secondItem="D0V-ij-92s" secondAttribute="bottom" id="NOt-Qs-d2A"/>
                     <constraint firstItem="D0V-ij-92s" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="gTg-Xm-f1c"/>
                     <constraint firstItem="D0V-ij-92s" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="k7q-8m-tZ7"/>
                 </constraints>
@@ -94,11 +118,12 @@
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
                 <outlet property="checkButton" destination="b30-0A-ylF" id="QH8-wv-rRT"/>
+                <outlet property="hintLabel" destination="m8b-xl-V0b" id="b5u-04-T0x"/>
                 <outlet property="iconView" destination="OhU-NP-q7k" id="Jiu-QN-e8e"/>
                 <outlet property="infoLabel" destination="Xsl-tZ-wW6" id="wy3-KC-zyF"/>
                 <outlet property="nameLabel" destination="PTR-Bl-xha" id="qJd-e9-fdN"/>
             </connections>
-            <point key="canvasLocation" x="102.89855072463769" y="55.245535714285715"/>
+            <point key="canvasLocation" x="102.89855072463769" y="76.674107142857139"/>
         </tableViewCell>
     </objects>
     <resources>
