--- a/BeamWallet/ViewControllers/Main/Settings/Cells/NodeCell.xib
+++ b/BeamWallet/ViewControllers/Main/Settings/Cells/NodeCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -29,7 +29,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="D0V-ij-92s">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="181"/>
+                        <rect key="frame" x="0.0" y="15" width="320" height="148"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconRandomNode" translatesAutoresizingMaskIntoConstraints="NO" id="OhU-NP-q7k">
                                 <rect key="frame" x="141" y="0.0" width="38" height="38"/>
@@ -39,21 +39,22 @@
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="EBa-Sf-W9T">
-                                <rect key="frame" x="20" y="53" width="280" height="128"/>
+                                <rect key="frame" x="20" y="48" width="280" height="100"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="Fxk-HV-YMJ">
-                                        <rect key="frame" x="0.0" y="0.0" width="280" height="63.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="280" height="100"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b30-0A-ylF">
-                                                <rect key="frame" x="0.0" y="0.0" width="40" height="63.5"/>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="top" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b30-0A-ylF">
+                                                <rect key="frame" x="0.0" y="0.0" width="40" height="100"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="40" id="csT-5N-VmV"/>
                                                 </constraints>
+                                                <inset key="imageEdgeInsets" minX="0.0" minY="30" maxX="0.0" maxY="0.0"/>
                                                 <state key="normal" image="checkboxEmpty"/>
                                                 <state key="selected" image="checkboxFull"/>
                                             </button>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="LGZ-tS-cke">
-                                                <rect key="frame" x="55" y="0.0" width="225" height="63.5"/>
+                                                <rect key="frame" x="55" y="0.0" width="225" height="100"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="RANDOM NODE (fast sync)" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PTR-Bl-xha">
                                                         <rect key="frame" x="0.0" y="0.0" width="225" height="17"/>
@@ -76,28 +77,28 @@
                                                             <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
                                                         </userDefinedRuntimeAttributes>
                                                     </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m8b-xl-V0b">
+                                                        <rect key="frame" x="0.0" y="71.5" width="225" height="28.5"/>
+                                                        <string key="text">You are currently connected to the node
+that supports only online transactions.</string>
+                                                        <fontDescription key="fontDescription" name="SFProDisplay-Italic" family="SF Pro Display" pointSize="14"/>
+                                                        <color key="textColor" red="0.55294117647058827" green="0.63137254901960782" blue="0.67843137254901964" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <nil key="highlightedColor"/>
+                                                        <userDefinedRuntimeAttributes>
+                                                            <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="NO"/>
+                                                            <userDefinedRuntimeAttribute type="string" keyPath="localizationKey" value="remote_node_hint"/>
+                                                        </userDefinedRuntimeAttributes>
+                                                    </label>
                                                 </subviews>
                                             </stackView>
                                         </subviews>
                                     </stackView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m8b-xl-V0b">
-                                        <rect key="frame" x="0.0" y="83.5" width="280" height="44.5"/>
-                                        <string key="text">You are currently connected to the node
-that supports only online transactions.</string>
-                                        <fontDescription key="fontDescription" name="SFProDisplay-Italic" family="SF Pro Display" pointSize="14"/>
-                                        <color key="textColor" red="0.55294117647058827" green="0.63137254901960782" blue="0.67843137254901964" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <nil key="highlightedColor"/>
-                                        <userDefinedRuntimeAttributes>
-                                            <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="NO"/>
-                                            <userDefinedRuntimeAttribute type="string" keyPath="localizationKey" value="remote_node_hint"/>
-                                        </userDefinedRuntimeAttributes>
-                                    </label>
                                 </subviews>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="EBa-Sf-W9T" firstAttribute="top" secondItem="OhU-NP-q7k" secondAttribute="bottom" constant="15" id="47R-Xb-Mah"/>
+                            <constraint firstItem="EBa-Sf-W9T" firstAttribute="top" secondItem="OhU-NP-q7k" secondAttribute="bottom" constant="10" id="47R-Xb-Mah"/>
                             <constraint firstItem="EBa-Sf-W9T" firstAttribute="leading" secondItem="D0V-ij-92s" secondAttribute="leading" constant="20" id="7Vf-CS-sgk"/>
                             <constraint firstItem="OhU-NP-q7k" firstAttribute="centerX" secondItem="D0V-ij-92s" secondAttribute="centerX" id="BM7-o4-rSX"/>
                             <constraint firstItem="OhU-NP-q7k" firstAttribute="top" secondItem="D0V-ij-92s" secondAttribute="top" id="Jf6-RX-i1j"/>
@@ -109,9 +110,9 @@ that supports only online transactions.</string>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="D0V-ij-92s" secondAttribute="trailing" id="IQ1-V6-Llt"/>
-                    <constraint firstAttribute="bottom" secondItem="D0V-ij-92s" secondAttribute="bottom" id="NOt-Qs-d2A"/>
+                    <constraint firstAttribute="bottom" secondItem="D0V-ij-92s" secondAttribute="bottom" constant="18" id="NOt-Qs-d2A"/>
                     <constraint firstItem="D0V-ij-92s" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="gTg-Xm-f1c"/>
-                    <constraint firstItem="D0V-ij-92s" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="k7q-8m-tZ7"/>
+                    <constraint firstItem="D0V-ij-92s" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="k7q-8m-tZ7"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
